Make some more modules compile
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.1@384406 13f79535-47bb-0310-9956-ffa450edef68